--- a/_config.yml
+++ b/_config.yml
@@ -5,13 +5,13 @@ reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: https://mmistakes.github.io, http://yourdomain.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url: "//ilijian.github.io/jekyll"
+# url: "//ilijian.github.io/jekyll"
 
 # Owner/author information
 owner:
   name:           见见
   avatar:         avatar.jpg
-  bio:            "Your bio goes here. It shouldn't be super long but a good sentence or two should suffice."
+  bio:            "A web developer"
   email:          ilijian@foxmail.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:
@@ -49,7 +49,8 @@ sass:
   style: compressed
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
-permalink:   /:categories/:title/
+# permalink:   /:categories/:title/
+permalink: pretty
 
 # Amount of post to show on home page
 paginate: 5
